--- a/RecipeBook/Base.lproj/Main_iPhone.storyboard
+++ b/RecipeBook/Base.lproj/Main_iPhone.storyboard
@@ -20,16 +20,42 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" barStyle="black" searchBarStyle="minimal" text="" id="rb8-JS-hwc">
+                                    <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="vXZ-lx-hvc" id="UCS-I5-8Zf"/>
+                                    </connections>
+                                </searchBar>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="RecipeCell" id="RMW-C2-RMF">
-                                        <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="RecipeCell" textLabel="V8n-xB-xFc" detailTextLabel="wTL-Pb-6YV" style="IBUITableViewCellStyleValue1" id="RMW-C2-RMF">
+                                        <rect key="frame" x="0.0" y="130" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RMW-C2-RMF" id="MNK-eX-kn4">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="V8n-xB-xFc">
+                                                    <rect key="frame" x="15" y="11" width="33" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wTL-Pb-6YV">
+                                                    <rect key="frame" x="241" y="11" width="44" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="U3o-Hy-tGo" kind="push" id="hn7-Uh-I4H"/>
+                                            <segue destination="U3o-Hy-tGo" kind="push" identifier="showRecipeDetail" id="hn7-Uh-I4H"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -48,15 +74,28 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Recipe Book" id="6Qv-SM-HYb"/>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="D2C-2W-1ep" id="cUa-da-Teg"/>
+                        <outlet property="tableView" destination="mkx-TR-kdI" id="mIS-pO-Nou"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="D2C-2W-1ep">
+                    <connections>
+                        <outlet property="delegate" destination="vXZ-lx-hvc" id="XpB-IF-5XM"/>
+                        <outlet property="searchBar" destination="rb8-JS-hwc" id="PDb-ym-Y7K"/>
+                        <outlet property="searchContentsController" destination="vXZ-lx-hvc" id="ZKw-kn-E3R"/>
+                        <outlet property="searchResultsDataSource" destination="vXZ-lx-hvc" id="JdR-ot-qr7"/>
+                        <outlet property="searchResultsDelegate" destination="vXZ-lx-hvc" id="ecC-ix-5Cp"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="541" y="138"/>
         </scene>
-        <!--View Controller-->
+        <!--Recipe Detail View Controller-->
         <scene sceneID="Cnz-vn-HYw">
             <objects>
-                <viewController id="U3o-Hy-tGo" sceneMemberID="viewController">
+                <viewController id="U3o-Hy-tGo" customClass="RecipeDetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="zyh-RJ-Sdi"/>
                         <viewControllerLayoutGuide type="bottom" id="YVs-fQ-7p1"/>
@@ -64,13 +103,32 @@
                     <view key="view" contentMode="scaleToFill" id="1ZX-fM-uil">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6WJ-g3-oK3">
+                                <rect key="frame" x="139" y="274" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="6WJ-g3-oK3" secondAttribute="centerY" id="cnh-qP-JSw"/>
+                            <constraint firstItem="6WJ-g3-oK3" firstAttribute="centerX" secondItem="1ZX-fM-uil" secondAttribute="centerX" id="gSC-Lz-XYC"/>
+                            <constraint firstAttribute="centerX" secondItem="6WJ-g3-oK3" secondAttribute="centerX" id="lx4-ge-2cO"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="hiD-xX-E2Q"/>
+                    <navigationItem key="navigationItem" id="hiD-xX-E2Q">
+                        <nil key="title"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="recipeLabel" destination="6WJ-g3-oK3" id="zNv-2w-v9m"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3ZF-f4-0fF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="918" y="138"/>
+            <point key="canvasLocation" x="956" y="138"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2aW-Bx-rxD">
